# mufuzz

./: .gitignore  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: cov.yml  fmt.yml  main.yml
proto/: execution.proto  feedback.proto  hello_world.proto  monitor.proto  msg_type.proto  mutation.proto  queue_management.proto
src/: datatype.rs  executor.rs  feedback.rs  frontend.rs  lib.rs  main.rs  minimizer.rs  monitor.rs  mutator.rs  queue.rs  rpc.rs  util.rs
src/executor/: forkserver.rs  frontend.rs  pipes.rs  rpc.rs  shmem.rs
src/feedback/: bitmap_collector.rs  frontend.rs  newbit_filter.rs  rpc.rs
src/frontend/: load_balance_frontend.rs  simple_frontend.rs  toy_frontend.rs  work_stealing_frontend.rs
src/monitor/: output_writer.rs  rpc.rs  stats.rs
src/mutator/: afl_mutator.rs  frontend.rs  rpc.rs
src/queue/: frontend.rs  manager.rs  rpc.rs
test_bins/: simple_prog  simple_prog.c  test_config.json  timeout_prog  timeout_prog.c
