[package]
name = "mufuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8.0", features = ["transport"] }
prost = "0.11.0"
lazy_static = "1.4.0"
clap = { version = "3.2.17", features = ["derive"] }

tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
#tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "full", "tracing"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
libc = "0.2.132"
nix = { version = "0.25.0", optional = true }
core_affinity = { version = "0.5", git = "https://github.com/s1341/core_affinity_rs", rev = "6648a7a", optional = true }
serde = { version = "1.0.136", default-features = false, features = [
  "alloc",
  "derive",
] } # serialization lib
#quote = "1.0"
#syn = "1.0"
async-trait = "0.1.57"
futures = "0.3.23"
rand = "0.8.5"
tower = "0.4.13"
http = "0.2.8"
serde_json = "1.0.83"
itertools = "0.10.3"
rand_distr = "0.4.3"
async-channel = "1.7.1"
rayon = "1.5.3"
dashmap = "5.3.4"
#crossbeam = "0.8.1"
psutil = "3.2.2"
bitflags = {version ="2.2.1", features = ["serde"] }

#[lib]
#proc-macro = true

[build-dependencies]
tonic-build = "0.8.0"

[dev-dependencies]
serial_test = "0.9.0"
criterion = "0.3.6"

[features]
default = ["std", "fork"]
std = ["core_affinity", "nix"] # print, env, launcher ... support
fork = []

[profile.release]
debug = true
